--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Byte-compiled / optimized / DLL files
 # Template taken from https://github.com/github/gitignore/blob/master/Python.gitignore
+
+
+#custom
+diary
+
 __pycache__/
 *.py[cod]
 *$py.class
